Tela ADD-Vendas | Arthur
Features adicionadas:
- Bug de diminuir quantidade corrigido
- Campo CPF adicionado
- Máscara de Reais nos valores
- Preço da venda adicionado
- Campo Valor pago na Tela Pagamento
- Cálculo do Troco e total da compra
- Parcelas somente no cartão de crédito

--- a/prjMerchades/prjMerchades.csproj
+++ b/prjMerchades/prjMerchades.csproj
@@ -64,6 +64,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dados\dsDadosSaida.cs">
+      <DependentUpon>dsDadosSaida.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Dados\dsDadosSaida.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
