--- a/prjMerchades/App.config
+++ b/prjMerchades/App.config
@@ -4,7 +4,10 @@
     </configSections>
     <connectionStrings>
         <add name="prjMerchades.Properties.Settings.db_240098_66_A_1_2024ConnectionString"
-            connectionString="Data Source=DESKTOP-QJKQV0N;Initial Catalog=dbo;Integrated Security=True;TrustServerCertificate=True"
+            connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=merchades;Integrated Security=True;TrustServerCertificate=True;&#xA;"
+            providerName="System.Data.SqlClient" />
+        <add name="prjMerchades.Properties.Settings.ConnectionString"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=merchades;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
